# AI_Summarizer

./: .gitignore  README.md  package-lock.json  package.json
backend/: pyproject.toml  requirements.txt
backend/src/: app.py  config.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.scss  main.jsx
frontend/src/components/Background/: StarBackground.jsx  StarBackground.scss
frontend/src/components/Features/: Features.jsx  Features.scss
frontend/src/components/Footer/: Footer.jsx  Footer.scss
frontend/src/components/Hero/: Hero.jsx  Hero.scss
frontend/src/components/Loader/: Loader.jsx  Loader.scss
frontend/src/components/Navbar/: Navbar.jsx  Navbar.scss
frontend/src/components/Summary/: Summary.jsx  Summary.scss
frontend/src/components/Upload/: Upload.jsx  Upload.scss
frontend/src/styles/: _animations.scss  _globals.scss  _variables.scss
