[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "google-generativeai>=0.8.6",
    "pydantic>=2.13.4",
    "pypdf>=6.13.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
